Feat: Adiciona contrutor na entidade Transacao para criar a partir de um TransacaoDTO Fix: remove qualquer referência a Transacao de TransacaoController isolando as camadas test: ajusta testes da TransacaoServiceTest para trabalharem com o dto e nao mais com a entidade